# crossandra

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _build.py  dev-requirements.txt  index.html  justfile  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/workflows/: ci.yml  publish.yml
crossandra/: common.py  lib.py  rule.py
docs/: examples.md  index.md  reference.md
src/crossandra/: __init__.py  common.py  exceptions.py  lib.py  rule.py
tests/: api_test.py  common_test.py  test_api.py  test_common.py
v2.2.0/: 404.html  index.html  sitemap.xml
v2.2.0/examples/: index.html
v2.2.0/reference/: index.html
v2.2.0/search/: search_index.json
v2.2.1/: 404.html  index.html  sitemap.xml
v2.2.1/examples/: index.html
v2.2.1/reference/: index.html
v2.3.0/: 404.html  index.html  sitemap.xml
v2.3.0/examples/: index.html
v2.3.0/reference/: index.html
v2.3.0/search/: search_index.json
