[project]
name = "crossandra"
version = "2.1.0"
description = "A fast and simple enum/regex-based tokenizer with decent configurability"
authors = [{ email = "trag1c <trag1cdev@yahoo.com>" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/trag1c/crossandra" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["result ~= 0.9.0"]

[tool.setuptools.packages.find]
include = ["crossandra*"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if sys.version_info.*:",
    "if __name__ == \"__main__\":",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN1", "ANN401", "ISC001", "ERA", "C9", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"crossandra/*" = ["PT"]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]

[build-system]
requires = ["setuptools", "mypy", "result ~= 0.9.0"]
build-backend = "setuptools.build_meta"
