[build-system]
requires = ["hatchling", "result~=0.17.0"]
build-backend = "hatchling.build"

[project]
name = "crossandra"
version = "2.3.0"
description = "A fast and simple enum/regex-based tokenizer with decent configurability"
authors = [{ name = "trag1c", email = "dev@jakubr.me" }]
license = { text = "MIT" }
urls = { repository = "https://github.com/trag1c/crossandra" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["result~=0.17.0"]

[dependency-groups]
dev = [
    "mike~=2.1.4",
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.7.6",
    "mypy[mypyc]~=1.20.0",
    "pytest~=9.0.3",
    "ruff~=0.15.10",
]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["hatch-mypyc"]

[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if sys.version_info.*:",
    "if __name__ == \"__main__\":",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM", "D", "FIX", "ANN1", "ANN401", "ISC001", "ERA", "C9", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001"]
